--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'io.visual-regression-tracker.sdk-java'
 version '1.3.0'
 
 apply plugin: 'java'
+apply plugin: 'groovy'
 apply plugin: "io.freefair.lombok"
 apply plugin: "com.github.johnrengelman.shadow"
 
@@ -28,8 +29,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     testImplementation group: 'org.testng', name: 'testng', version: '7.1.0'
     testImplementation 'commons-io:commons-io:2.6'
+    testImplementation 'org.mockito:mockito-core:3.3.3'
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.7.2"
 }
 
-test{
+test {
     useTestNG()
 }
