--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'io.visual-regression-tracker.sdk-java'
 version '1.3.0'
 
 apply plugin: 'java'
-apply plugin: 'groovy'
+apply plugin: 'jacoco'
 apply plugin: "io.freefair.lombok"
 apply plugin: "com.github.johnrengelman.shadow"
 
