--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'io.visual-regression-tracker.sdk-java'
 version '3.1.0'
 
 apply plugin: 'java'
+apply plugin: 'jacoco'
 apply plugin: "io.freefair.lombok"
 apply plugin: "com.github.johnrengelman.shadow"
 
@@ -34,4 +35,5 @@ dependencies {
 
 test {
     useTestNG()
+    finalizedBy jacocoTestReport // report is always generated after tests run
 }
