--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,4 +31,4 @@ jobs:
     - name: Codacy Coverage Reporter
       uses: codacy/codacy-coverage-reporter-action@0.2.0
       with:
-        project-token:  ${{secret.CODACY_TOKEN}}
+        project-token:  ${{ secrets.CODACY_TOKEN }}
