--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,7 +28,5 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
-    - name: Codacy Coverage Reporter
-      uses: codacy/codacy-coverage-reporter-action@0.2.0
-      with:
-        project-token:  ${{ secrets.CODACY_TOKEN }}
+    - name: Codecov
+      uses: codecov/codecov-action@v1.0.12
