--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,23 @@ test {
     useTestNG()
     finalizedBy jacocoTestReport // report is always generated after tests run
 }
+
+// codecov integration https://github.com/codecov/example-gradle
+task codeCoverageReport(type: JacocoReport) {
+    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
+
+    subprojects.each {
+        sourceSets it.sourceSets.main
+    }
+
+    reports {
+        xml.enabled true
+        xml.destination file("${buildDir}/reports/jacoco/report.xml")
+        html.enabled false
+        csv.enabled false
+    }
+}
+
+codeCoverageReport.dependsOn {
+    subprojects*.test
+}
