--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,6 +27,9 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build
+    
+    - name: Generate coverage
+      run: ./gradlew codeCoverageReport
 
     - name: Codecov
       uses: codecov/codecov-action@v1.0.12
