--- a/build.gradle
+++ b/build.gradle
@@ -25,12 +25,12 @@ buildscript {
 }
 
 dependencies {
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testImplementation group: 'org.testng', name: 'testng', version: '7.5'
-    testImplementation 'commons-io:commons-io:2.8.0'
+    testImplementation 'commons-io:commons-io:2.11.0'
     testImplementation 'org.mockito:mockito-core:4.4.0'
-    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
 }
 
 test {
