--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ buildscript {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testImplementation group: 'org.testng', name: 'testng', version: '7.5'
     testImplementation 'commons-io:commons-io:2.11.0'
     testImplementation 'org.mockito:mockito-core:4.4.0'
