--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     testImplementation 'commons-io:commons-io:2.11.0'
     testImplementation 'org.mockito:mockito-core:4.4.0'
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
+    testImplementation 'uk.org.webcompere:system-stubs-testng:2.1.3'
 }
 
 test {
