--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
+        distribution: 'temurin'
         java-version: 11
 
     - name: Grant execute permission for gradlew
